Name: haskell-json
Version: 0.1
Maintainer: Chris Done (chrisdone@gmail.com)
Author: Chris Done (chrisdone@gmail.com)
Copyright: 2010 Chris Done
License: BSD3
Category: Text, XML, JSON, Web
Synopsis: Simple online JSON/XML-based Haskell evaluation service
Build-Type: Simple
Cabal-Version: >= 1.2

Executable haskell.json
  Main-Is: haskell-json.hs
  HS-Source-Dirs: src
  GHC-Options: -Wall -O2 -threaded
  Extensions: ScopedTypeVariables
  Build-Depends: base > 4, fastcgi, cgi-utils, mtl, json, directory, process, haskell-src-exts